adjusted some things for github pages

--- a/_answers/how_to_change_your_photo.html
+++ b/_answers/how_to_change_your_photo.html
@@ -1,7 +1,7 @@
 ---
 layout: answer
 title: Adding your picture to email
-question: Which Wi-Fi network do I use?
+question: How do I add my photo to my email?
 topic: email
 ---
 <h1>Adding your picture to email</h1>
