--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Marietta College's frequently asked questions about information technology.">
 	<title>Information Technology FAQ</title>
 	<link href="faq.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
